<resources>
    <string name="app_name">Habita</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Ingresa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name_property">Concepcion del Uruguay</string>
    <string name="lacation_card">Distancia:</string>
    <string name="distance_card">200mts de Ti</string>
    <string name="likenumber_card">Favorito</string>

    <!-- String del bottombar tabs -->

    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="usernme_property">Concepcion del Uruguay</string>
    <string name="secondorddetail">Me gusta</string>
    <string name="title_image_property">\"Duplex 2 hambientes\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit fermentum, quisque himenaeos commodo sapien natoque tempor nisl metus, semper velit dignissim litora curae montes convallis. Dapibus ullamcorper felis mattis enim cubilia fames, mi rutrum non neque pharetra orci eros, duis aliquet conubia augue praesent. Sociosqu eleifend habitant leo elementum tristique velit sodales accumsan, eu nisi fames hendrerit taciti odio scelerisque rutrum maecenas, egestas massa a magna nibh commodo cum.  Ut mollis sollicitudin ultrices risus nunc quam gravida conubia quis vitae, tellus arcu cum nec sem porttitor tincidunt ad rutrum. Himenaeos donec ut gravida convallis risus fermentum dis venenatis eros, libero enim bibendum orci mauris ridiculus cras sem, eu magna suscipit sapien tincidunt non odio imperdiet. Gravida egestas dictumst ultricies montes class mus urna curabitur ut nisi, in commodo euismod id convallis hac neque lacinia.</string>
    <string name="username_profile">Ernesto Ledesma</string>
    <string name="username_card">Ernesto Ledesma</string>

</resources>
