<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/property_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:scaleType="centerCrop"
            android:background="@drawable/ing_duplex"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/baclgroundtext_card"
            >

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name_property"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_usernamecard" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lacation_card"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/firsword_textsize"/>

            <TextView
                android:id="@+id/timeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/timecard_marginleftcard"
                android:text="@string/distance_card"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/firsword_textsize" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_marcador"/>
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margintop_card"
                android:orientation="horizontal"
                >

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleftcard"
                    android:text="@string/likenumber_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firsword_textsize" />




            </LinearLayout>



        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>